# MLOPS_DVC

./: .gitignore  dvc.yaml  main.py  params.yaml  preview.ipynb  pyproject.toml
config/: data_paths.yaml
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: accuracy.tsv  precision.tsv  recall.tsv  roc_auc_core.tsv
models/: model.pkl
notebooks/: experiments.ipynb
reports/: metrics.json
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_evaluater.py  model_training.py
src/Logger/: console_handler.py  file_handler.py  format_strings.py  formatter.py  logger_factory.py
src/data_ops/: remove_invalid.py
src/data_ops/data_loader/: base_loader.py  csv_loader.py
src/logger/: logger.py
src/model/: Linear_Regression.py
src/utility/: load_yaml.py  project_root.py
src/utils/: get_project_root.py
